<resources>
    <string name="app_name">GestonStages</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_modifierprofile">Modifier le profile</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="btn_connexion">Sign in</string>
    <string name="tv_inscription">Don\'t have an account ? Sign Up</string>
    <string name="tiet_courrielConnexion">Email</string>
    <string name="tiet_mdpConnexion">Password</string>
    <string name="chk_afficherMdp">Show password</string>
    <string name="title_activity_activite_deconnexion">ActiviteDeconnexion</string>
    <string name="tv_nomConnexion">Sign In</string>
    <string name="tv_titreInscription">Sign Up</string>
    <string name="tiet_courrielInscription">Email</string>
    <string name="tiet_mdpInscription">Password</string>
    <string name="btn_inscription">Password</string>
    <string name="tv_connexionAccueil">Already have an account ? Sign in</string>
    <string name="tiet_mdpConfirmationInscription">Confirm password</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tv_titreProfil">Profile</string>
    <string name="tv_titreInfoPerso">Personal Informations</string>
    <string name="tiet_nom">Name</string>
    <string name="tv_mdpModifier">Update password</string>
    <string name="tv_coordonnees">Contact details</string>
    <string name="btn_sauvegarder">Save</string>

</resources>