<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ModificationProfile">


    <TextView
        android:id="@+id/tv_titreProfil"
        android:layout_width="175dp"
        android:layout_height="43dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/tv_titreProfil"
        android:textAlignment="center"
        android:textColor="@color/purple_500"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.095" />


    <ImageView
        android:id="@+id/img_profile"
        android:layout_width="102dp"
        android:layout_height="71dp"
        android:src="@drawable/img_profile"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.948"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.11" />

    <TextView
        android:id="@+id/tv_titreInfoPerso"
        android:layout_width="256dp"
        android:layout_height="34dp"
        android:text="@string/tv_titreInfoPerso"
        android:textColor="@color/purple_500"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.051"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.221" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_nom"
        android:layout_width="312dp"
        android:layout_height="63dp"
        android:background="@drawable/changementforme"
        android:ems="10"
        android:fontFamily="sans-serif-medium"
        android:paddingLeft="10dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColor="#6C6C6C"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.08"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.339">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tiet_nom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/tiet_nom" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_courrielModifier"
        android:layout_width="312dp"
        android:layout_height="64dp"
        android:background="@drawable/changementforme"
        android:ems="10"
        android:fontFamily="sans-serif-medium"
        android:paddingLeft="10dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColor="#6C6C6C"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.08"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.547">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tiet_courrielModifier"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/tiet_courrielConnexion" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_mdpModfier"
        android:layout_width="332dp"
        android:layout_height="68dp"
        android:background="@drawable/changementforme"
        android:ems="10"
        android:fontFamily="sans-serif-medium"
        android:paddingLeft="10dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColor="#6C6C6C"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.101"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.764">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tiet_mdpModfier"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/tiet_mdpInscription" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_mdpConfirmationModfier"
        android:layout_width="332dp"
        android:layout_height="68dp"
        android:background="@drawable/changementforme"
        android:ems="10"
        android:fontFamily="sans-serif-medium"
        android:paddingLeft="10dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColor="#6C6C6C"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.101"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.886">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tiet_mdpConfirmationModfier"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/tiet_mdpConfirmationInscription" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tv_mdpModifier"
        android:layout_width="251dp"
        android:layout_height="27dp"
        android:text="@string/tv_mdpModifier"
        android:textColor="@color/purple_500"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.646" />

    <TextView
        android:id="@+id/tv_coordonnees"
        android:layout_width="149dp"
        android:layout_height="29dp"
        android:text="@string/tv_coordonnees"
        android:textColor="@color/purple_500"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.083"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.447" />

    <Button
        android:id="@+id/btn_sauvegarder"
        android:layout_width="308dp"
        android:layout_height="51dp"
        android:background="@drawable/degradercouleurbtn"
        android:onClick="onCliclSauvegarder"
        android:text="@string/btn_sauvegarder"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.213"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.976" />

</androidx.constraintlayout.widget.ConstraintLayout>