<?xml version="1.0" encoding="utf-8"?>

<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:openDrawer="start">

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActiviteInscription"
    android:background="@drawable/degradecouleur"
    >
    <TextView
        android:id="@+id/tv_titreInscription"
        android:layout_width="202dp"
        android:layout_height="59dp"
        android:fontFamily="sans-serif-medium"
        android:gravity="center_horizontal"
        android:text="@string/tv_titreInscription"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColor="#FFFFFF"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.095" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_courrielInscription"
        android:layout_width="332dp"
        android:layout_height="68dp"
        android:background="@drawable/changementforme"
        android:ems="10"
        android:fontFamily="sans-serif-medium"
        android:paddingLeft="10dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColor="#6C6C6C"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.405"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.279">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tiet_courriel_inscription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/tiet_courrielInscription" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_mdpInscription"
        android:layout_width="332dp"
        android:layout_height="68dp"
        android:background="@drawable/changementforme"
        android:ems="10"
        android:fontFamily="sans-serif-medium"
        android:paddingLeft="10dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColor="#6C6C6C"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.405"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.461">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tiet_mdpInscription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/tiet_mdpInscription" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_inscription"
        android:layout_width="332dp"
        android:layout_height="68dp"
        android:background="@drawable/degradercouleurbtn"
        android:fontFamily="sans-serif-medium"
        android:onClick="onclickSeConnecter"
        android:text="@string/btn_inscription"
        android:textAllCaps="false"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.405"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.891" />

    <TextView
        android:id="@+id/tv_connexionAccueil"
        android:layout_width="337dp"
        android:layout_height="22dp"
        android:fontFamily="sans-serif-medium"
        android:gravity="center"
        android:onClick="onClickConnexion"
        android:text="@string/tv_connexionAccueil"
        android:textColor="#FEFEFE"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.216"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.964" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_confirmationMdp"
        android:layout_width="332dp"
        android:layout_height="68dp"
        android:background="@drawable/changementforme"
        android:ems="10"
        android:fontFamily="sans-serif-medium"
        android:paddingLeft="10dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColor="#6C6C6C"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.405"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.648">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tiet_confirmationMdp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/tiet_mdpConfirmationInscription" />
    </com.google.android.material.textfield.TextInputLayout>

    <CheckBox
        android:id="@+id/chk_afficherMdpInscription"
        android:layout_width="187dp"
        android:layout_height="30dp"
        android:onClick="onClickChk_affichageMdp"
        android:text="@string/chk_afficherMdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.165"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.748" />

</androidx.constraintlayout.widget.ConstraintLayout>



</androidx.drawerlayout.widget.DrawerLayout>